<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="main_search">Поиск</string>
    <string name="main_mediateka">Медиатека</string>
    <string name="main_settings">Настройки</string>
    <string name="sett_theme">Темная тема</string>
    <string name="sett_share">Поделиться приложением</string>
    <string name="sett_support">Написать в поддержку</string>
    <string name="sett_agreement">Пользовательское соглашение</string>
    <string name="share_message" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="message_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="message_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="offer_url" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="support_email" translatable="false">egorkakegotam@yandex.ru</string>
    <string name="track_icon_description">Обложка альбома</string>
    <string name="separator_icon_description">Разделитель</string>
    <string name="forward_icon_description">Вперёд</string>
    <string name="back">Назад</string>
    <string name="clear_icon_description">Кнопка очистки</string>
    <string name="no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="base_itunes_url" translatable="false">https://itunes.apple.com/</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="to_playlist">Добавить в плейлист</string>
    <string name="to_favourites">Добавить в избранное</string>
    <string name="player_playback_description">Кнопка воспроизведения</string>
    <string name="remaining_time" translatable="false">00:00</string>
    <string name="track_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="release_date">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

</resources>