<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search_background"
    android:id="@+id/main"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/main_search"
        app:titleTextColor="@color/search_title_text"
        app:titleTextAppearance="@style/TitleTextStyle"
        app:contentInsetStart="@dimen/toolbar_inset_start"/>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_layout_height"
        android:paddingBottom="@dimen/search_padding_vertical"
        android:paddingTop="@dimen/search_padding_vertical">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/search_margin_horizontal"
            android:layout_marginEnd="@dimen/search_margin_horizontal"
            android:background="@drawable/back_search_field"
            android:drawableStart="@drawable/search_edit_text"
            android:drawablePadding="@dimen/search_drawable_padding"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/main_search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@color/search_text"
            android:singleLine="true"
            android:paddingStart="@dimen/search_padding_start"
            android:textColorHint="@color/search_edit_hint"
            android:theme="@style/BlueCursorTheme"
            android:textFontWeight="400"
            android:textSize="@dimen/second_text_size"/>

        <ImageView
            android:id="@+id/clearImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/clear_margin_end"
            android:layout_gravity="center_vertical|end"
            android:contentDescription="@string/clear_icon_description"
            app:srcCompat="@drawable/clear"
            app:tint="@color/search_edit_clear"
            android:visibility="gone"/>


    </FrameLayout>

    <LinearLayout
        android:id="@+id/searchHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/search_history_margin_top"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/SearchHistoryText"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/search_history"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/search_rw_margin_top"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <Button
            android:id="@+id/clearHistoryButton"
            style="@style/ClearHistoryButton"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/search_button_margin_vert"
            android:text="@string/clear_history"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noConnection"
        style="@style/ErrorLayout"
        android:visibility="gone">

        <ImageView
            style="@style/ErrorImage"
            android:src="@drawable/no_internet_error"
            android:contentDescription="@string/no_connection"/>

        <TextView
            style="@style/ErrorText"
            android:text="@string/no_connection"/>

        <Button
            android:id="@+id/refreshButton"
            style="@style/RefreshButton"
            android:text="@string/refresh"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nothingFound"
        style="@style/ErrorLayout"
        android:visibility="gone">

        <ImageView
            style="@style/ErrorImage"
            android:src="@drawable/not_found_error"
            android:contentDescription="@string/not_found"/>

        <TextView
            style="@style/ErrorText"
            android:text="@string/not_found"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/list_margin_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/list_margin_horizontal"
        android:layout_weight="1"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</LinearLayout>