<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_blue"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_gravity="start"
        android:paddingTop="14dp"
        android:textFontWeight="500"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="28dp"
        android:background="@color/main_blue"
        android:orientation="vertical">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/main_black"
            android:backgroundTint="@color/white"
            android:text="@string/main_search"
            android:textFontWeight="500"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/main_black" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/main_black"
            android:backgroundTint="@color/white"
            android:layout_marginTop="16dp"
            android:textFontWeight="500"
            android:text="@string/main_mediateka"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/main_black"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/main_black"
            android:backgroundTint="@color/white"
            android:layout_marginTop="16dp"
            android:textFontWeight="500"
            android:text="@string/main_settings"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/main_black"/>

    </LinearLayout>
</LinearLayout>