<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <Button
            android:id="@+id/button4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/white"
            app:icon="@drawable/arrow_back"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/sett_black"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="start"
            android:paddingTop="14dp"
            android:paddingStart="12dp"
            android:textFontWeight="500"
            android:textColor="@color/main_black"
            android:text="@string/main_settings"
            android:textSize="@dimen/title_text_size"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_layout_height"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:paddingStart="@dimen/second_padding_start"
            android:textSize="@dimen/second_text_size"
            android:text="@string/sett_theme"
            android:textFontWeight="400"
            android:textColor="@color/sett_black"/>

        <Switch
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:paddingEnd="6dp"
            android:layout_gravity="center_vertical|end"
            tools:checked="true"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_layout_height">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:paddingStart="@dimen/second_padding_start"
            android:textSize="@dimen/second_text_size"
            android:text="@string/sett_share"
            android:textFontWeight="400"
            android:textColor="@color/sett_black"/>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/share"
            android:fillColor="#AEAFB4"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/second_padding_end"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_layout_height">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:paddingStart="@dimen/second_padding_start"
            android:textSize="@dimen/second_text_size"
            android:textFontWeight="400"
            android:text="@string/sett_support"
            android:textColor="@color/sett_black"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/support"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/second_padding_end"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_layout_height">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:paddingStart="@dimen/second_padding_start"
            android:textSize="@dimen/second_text_size"
            android:text="@string/sett_agreement"
            android:textFontWeight="400"
            android:textColor="@color/sett_black"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/arrow_forward"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/second_padding_end"/>
    </FrameLayout>
</LinearLayout>